[package]
name = "kasei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.2", features = ["image", "mixer", "ttf", "bundled"] }

[workspace]
members = ["the_lib", "the_game"]

# [profile.dev.package."*"]
# opt-level = 3
